--- a/fixtures/expected_with_color.tmpl
+++ b/fixtures/expected_with_color.tmpl
@@ -1,7 +1,7 @@
-<36>[]interface {}<39><37>/* len=38 cap=38 */<39>{
+<36>[]interface {}<39>{
     <31>nil<39>,
     <36>[]int<39>{},
-    <36>[]interface {}<39><37>/* len=4 cap=4 */<39>{
+    <36>[]interface {}<39>{
         <34>true<39>,
         <34>false<39>,
         <36>uintptr<39>(<32>23<39>),
@@ -23,7 +23,7 @@
     <35>make<39>(<34>chan<39> <36>string<39>, <32>3<39>)<37>/* {{.ch2}} */<39>,
     <35>make<39>(<34>chan<39> <36>struct {}<39>)<37>/* {{.ch3}} */<39>,
     (<36>func(string) int<39>)(<31>nil<39>)<37>/* {{.fn}} */<39>,
-    <36>map[interface {}]interface {}<39><37>/* len=3 */<39>{
+    <36>map[interface {}]interface {}<39>{
         <33>`"test"`<39>: <32>10<39>,
         <33>"a"<39>: <32>1<39>,
         (<36>interface {}<39>)(<31>nil<39>)<37>/* {{.ref}} */<39>: <32>1<39>,
@@ -39,11 +39,11 @@
     <35>gop.Base64<39>(<33>"YWHi"<39>),
     <36>[]byte<39>(<33>`bytes<39>
 <33>	bytes`<39>),
-    <36>[]byte<39>(<33>`long long long long string`<39>)<37>/* len=26 */<39>,
+    <36>[]byte<39>(<33>"long long long long string"<39>),
     <36>byte<39>(<33>'a'<39>),
     <36>byte<39>(<33>0x1<39>),
     <33>'天'<39>,
-    <33>`long long long long string`<39><37>/* len=26 */<39>,
+    <33>"long long long long string"<39>,
     <33>`<39>
 <33>test`<39>,
     <33>"" +<39>
@@ -54,11 +54,11 @@
     &<36>struct { Int int }<39>{
         Int: <32>0<39>,
     },
-    &<36>map[int]int<39><37>/* len=2 */<39>{
+    &<36>map[int]int<39>{
         <32>1<39>: <32>2<39>,
         <32>3<39>: <32>4<39>,
     },
-    &<36>[]int<39><37>/* len=2 cap=2 */<39>{
+    &<36>[]int<39>{
         <32>1<39>,
         <32>2<39>,
     },
@@ -67,7 +67,7 @@
         <32>2<39>,
     },
     <35>gop.Ptr<39>(<36>[]byte<39>(<33>"\x01\x02"<39>)).(<36>*[]uint8<39>),
-    <35>gop.Time<39>(<33>`2021-08-28T08:36:36.807908+08:00`<39>, <32>63765707796<39>),
+    <35>gop.Time<39>(<33>"2021-08-28T08:36:36.807908+08:00"<39>, <32>63765707796<39>),
     <36>gop.Duration<39>(<33>"1h0m0s"<39>),
     <35>gop.JSONStr<39>(<36>map[string]interface {}<39>{
         <33>"a"<39>: <32>1.0<39>,
